--- a/source/views/pages/automotive/index.hbs
+++ b/source/views/pages/automotive/index.hbs
@@ -21,95 +21,93 @@ canon: '/automotive/'
     </div>
   </div>
 
-  <div class="row push--60 align-middle">
-    <div class="columns large-5">
-      <h3 class="open-sans-light">Vayyar’s Automotive sensors detect over 150k points of interest per second, inside and outside of vehicles</h3>
+  <div class="row push--20 push--medium-40 align-middle">
+    <div class="columns small-12 large-5 text-center large-text-left">
+      <h3 class="open-sans-light">Detect and monitor presence, location, posture, distances, vital signs and obstacles. <br /><br />Vayyar’s Automotive sensors detect over 150K points of interest per second.</h3>
     </div>
-    <div class="columns">
+    <div class="columns small-12 medium-expand push--40">
       <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZT9wCnTvwQc" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
 
-  <div class="row push--100">
+  <div class="row push--medium-30 push--medium-100">
     <div class="columns text-center">
-      <h2 class="open-sans-light">Embeddable capabilities</h2>
+      <h2 class="open-sans-light">Applications</h2>
     </div>
   </div>
 
-  <div class="row push--40">
-    <div class="columns">
-      <h3 class="open-sans-bold fc--aqua">01. Driver monitoring</h3>
-      <h3 class="open-sans-bold fc--aqua push--40">02. In-car passengers</h3>
+  <div class="row push--20 push--medium-40">
+    <div class="columns small-12 medium-expand text-center">
+      <h3 class="open-sans-bold fc--aqua"><a href="#driver-assistance" class="js-jumplink">1. Driver Support</a></h3>
+      <h3 class="open-sans-bold fc--aqua push--20 push--medium-40"><a href="#passenger-monitoring" class="js-jumplink">2. In-car Passenger Monitoring</a></h3>
     </div>
-    <div class="columns">
-      <h3 class="open-sans-bold fc--aqua">3. Car surroundings</h3>
-      <h3 class="open-sans-bold fc--aqua push--40">4. Trucks & Cargo Management</h3>
+    <div class="columns small-12 medium-expand text-center">
+      <h3 class="open-sans-bold fc--aqua push--20"><a href="#adaptive-collision" class="js-jumplink">3. Adaptive Collision Avoidance</a></h3>
+      <h3 class="open-sans-bold fc--aqua push--20 push--medium-40"><a href="#cargo-management" class="js-jumplink">4. Freight & Cargo Management</a></h3>
     </div>
   </div>
 
-  <div class="row push--200 align-middle">
-    <div class="columns">
-      <img src="http://placehold.it/600x400" />
+  <div class="row push--60 push--medium-200 align-middle align-justify" id="driver-assistance">
+    <div class="columns small-12 large-5">
+      <img src="/assets/images/automotive-status.jpg" />
     </div>
-    <div class="columns">
+    <div class="columns small-12 large-6">
       <h1 class="xl open-sans-bold fc--lg">01</h1>
-      <h2 class="open-sans-light">Driver Monitoring</h2>
-      <ul class="feature-list push--30">
-        <li>Monitor driver's heart-rate/breathing rate</li>
-        <li>Identify head position and movement of head</li>
-        <li>Measure body parts distance from air-bag</li>
-        <li>Infotainment control system (hand & finger gesture control)</li>
+      <h2 class="open-sans-light">Driver Support</h2>
+      <ul class="feature-list push--30 push--medium-30">
+        <li>Track driver vital signs</li>
+        <li>Identify head position and movement</li>
+        <li>Measure proximity and posture for air-bag optimization</li>
+        <li>Recognize gestures for Infotainment control</li>
       </ul>
     </div>
   </div>
 
-  <div class="row push--200 align-middle">
-    <div class="columns">
+  <div class="row push--60 push--medium-200 align-middle align-justify" id="passenger-monitoring">
+    <div class="columns small-12 large-6">
       <h1 class="xl open-sans-bold fc--lg">02</h1>
-      <h2 class="open-sans-light">In-car Passengers</h2>
-      <ul class="feature-list push--30">
-        <li>Identify people's location in different seats in the car with a single sensor (3-rows)</li>
-        <li>Sense if a baby was left behind in the car</li>
-        <li>Conduct mass-classification of passenger's sizes <br /> <small>(i.e. male-adult 95%, child &lt;8 YO, baby, etc.) </small></li>
-        <li>Detect passenger's proximity to air-bag for safety</li>
+      <h2 class="open-sans-light">In-car Passenger Monitoring</h2>
+      <ul class="feature-list push--30 push--medium-30">
+        <li>Identify passenger location within the car</li>
+        <li>Sense occupant’s presence, such as a baby forgotten in the car</li>
+        <li>Classify passengers according to size, height, age and other parameters</li>
+        <li>Smart air-bag deployment and optimization</li>
       </ul>
     </div>
-    <div class="columns">
-      <img src="http://placehold.it/600x400" />
+    <div class="columns push--30 small-12 large-5">
+      <img src="/assets/images/automotive-in-car.jpg" />
     </div>
   </div>
 
-  <div class="row push--200 align-middle">
-    <div class="columns">
-      <img src="http://placehold.it/600x400" />
+  <div class="row push--60 push--medium-200 align-middle align-justify" id="adaptive-collision">
+    <div class="columns small-12 large-5">
+      <img src="/assets/images/automotive-surroundings.jpg" />
     </div>
-    <div class="columns">
+    <div class="columns push--30 small-12 large-6">
       <h1 class="xl open-sans-bold fc--lg">03</h1>
-      <h2 class="open-sans-light">Car Surroundings</h2>
-      <ul class="feature-list push--30">
-        <li>Provide collision avoidance while doors being opened against obstacles/bicycle driving-by</li>
-        <li>Offer automatic parking assistance (high resolution  back-view radar)</li>
-        <li>Identify road conditions</li>
-        <li>Detect tires condition</li>
+      <h2 class="open-sans-light">Adaptive Collision Avoidance</h2>
+      <ul class="feature-list push--30 push--medium-30">
+        <li>Avoid collisions through object detection, classification and trajectory mapping</li>
+        <li>Monitor surroundings, both moving and static, for parking assistance</li>
+        <li>Identify and avoid elevated obstacles</li>
       </ul>
     </div>
   </div>
 
-  <div class="row push--200 align-middle">
-    <div class="columns">
+  <div class="row push--60 push--medium-200 align-middle align-justify" id="cargo-management">
+    <div class="columns small-12 large-6">
       <h1 class="xl open-sans-bold fc--lg">04</h1>
-      <h2 class="open-sans-light">Trucks & Cargo Management</h2>
-      <ul class="feature-list push--30">
-        <li>Provide indication for % full/empty</li>
-        <li>Identify movement in cargo while driving</li>
-        <li>Imaging of cargo packed</li>
-        <li>Blind-spot detection</li>
+      <h2 class="open-sans-light">Freight & Cargo Management</h2>
+      <ul class="feature-list push--30 push--medium-30">
+        <li>Detect available cargo space that is hidden from view</li>
+        <li>Monitor cargo distribution</li>
+        <li>Identify shifting and moving cargo</li>
       </ul>
     </div>
-    <div class="columns">
-      <img src="http://placehold.it/600x400" />
+    <div class="columns push--30 small-12 large-5">
+      <img src="/assets/images/automotive-cargo.jpg" />
     </div>
   </div>
 
