--- a/source/views/pages/index.hbs
+++ b/source/views/pages/index.hbs
@@ -8,40 +8,47 @@ description: Vayyar develops safe, mobile, low cost 3D imaging sensors, enabling
 
 <div class="main-hero">
   <div class="main-hero__row row align-middle">
-    <div class="hero__text-group columns large-6">
-      <img src="/assets/images/vayyar-chip-mobile.jpg" class="hide-for-medium"/>
+    <div class="hero__text-group columns large-7">
+      <img src="/assets/images/vayyar-chip-mobile.jpg" width="100%" height="auto" class="hide-for-large"/>
       <h1 class="open-sans-light">Meet a new kind of imaging device</h1>
-      <h3 class="open-sans-light">Track everything around you in real time, without a camera.</h3>
+      <h3 class="open-sans-light">Track everything around you in <br class="show-for-medium" />real-time without a camera</h3>
+      <p class="push--30 push--medium-30">
+        <a href="#T4Pb_6Yxfu0" class="js-video-lb btn btn--square">See How it Works <i class="fa fa-angle-right"><i class="fa fa-angle-right"></i></a>
+      </p>
     </div>
   </div>
 </div>
 
 <div class="row expanded">
   <div class="hero__creds columns large-12">
-    <div class="row">
-      <p class="small-12 lead open-sans-light text-center medium-text-left">
-        As seen on...
-      </p>
-    </div>
-    <div class="row">
-      <div class="columns small-12 medium-2 push--small-20 text-center"><img src="/assets/images/tech-crunch.jpg" alt=""/></div>
-      <div class="columns small-12 medium-2 push--small-20 text-center"><img src="/assets/images/entrepreneur.jpg" alt=""/></div>
-      <div class="columns small-12 medium-2 push--small-20 text-center"><img src="/assets/images/forbes.jpg" alt=""/></div>
-      <div class="columns small-12 medium-2 push--small-20 text-center"><img src="/assets/images/fast-co.jpg" alt=""/></div>
-      <div class="columns small-12 medium-2 push--small-20 text-center"><img src="/assets/images/cnbc.jpg" alt=""/></div>
-      <div class="columns small-12 medium-2 push--small-20 text-center"><img src="/assets/images/computerworld.jpg" alt=""/></div>
+    <div class="row align-center">
+      <div class="columns small-12 large-10">
+        <div class="row">
+          <p class="small-12 lead open-sans-light text-center medium-text-left">
+            As seen on...
+          </p>
+        </div>
+        <div class="row align-center align-middle">
+          <div class="columns small-5 medium-expand push--20 text-center"><a target="_blank" href="https://techcrunch.com/2017/07/13/vayyar-launches-3d-sensors-that-give-self-driving-cars-interior-awareness/"><img width="100%" height="auto" src="/assets/images/tech-crunch.jpg" alt=""/></a></div>
+          <div class="columns small-5 medium-expand push--20 text-center"><a target="_blank" href="https://www.entrepreneur.com/article/288177"><img width="100%" height="auto" src="/assets/images/entrepreneur.jpg" alt=""/></a></div>
+          <div class="columns small-5 medium-expand push--20 text-center"><a target="_blank" href="https://www.forbes.com/forbes/welcome/?toURL=https://www.forbes.com/sites/jenniferhicks/2015/12/29/this-new-3d-sensor-can-help-detect-breast-cancer-or-see-through-walls/&refURL=http://localhost:3000/about/&referrer=http://localhost:3000/about/#34f75f633b19"><img width="100%" height="auto" src="/assets/images/forbes.jpg" alt=""/></a></div>
+          <div class="columns small-5 medium-expand push--20 text-center"><a target="_blank" href="https://www.fastcompany.com/3056939/with-walabot-your-phone-can-see-through-walls-and-pan-for-gold"><img width="100%" height="auto" src="/assets/images/fast-co.jpg" alt=""/></a></div>
+          <div class="columns small-5 medium-expand push--20 text-center"><a target="_blank" href="https://www.cnbc.com/2017/03/13/x-ray-vision-that-can-detect-cancer-could-be-coming-to-future-smartphones.html"><img width="100%" height="auto" src="/assets/images/cnbc.jpg" alt=""/></a></div>
+          <div class="columns small-5 medium-expand push--20 text-center"><a target="_blank" href="https://readwrite.com/2016/02/26/vayaar-walabot/"><img width="100%" height="auto" src="/assets/images/readwritebw.png" alt=""/></a></div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="section section--top-padded feature-quadrant">
   <div class="row align-center">
-    <h2 class="open-sans-light">Vayyar Divisions</h2>
+    <h2 class="open-sans-light">Vayyar Applications</h2>
   </div>
   <div class="row">
     <div class="columns small-12 medium-6">
       <a href="/smart-home" class="quadrant__inner purple--grad quadrant--smart-home">
-        <h2 class="open-sans-light">Smart Home &amp; Office</h2>
+        <h2 class="open-sans-light">Smart Home</h2>
       </a>
     </div>
     <div class="columns small-12 medium-6">
@@ -53,12 +60,12 @@ description: Vayyar develops safe, mobile, low cost 3D imaging sensors, enabling
   <div class="row">
     <div class="columns small-12 medium-6">
       <a href="/retail-robotics-medical" class="quadrant__inner green--grad quadrant--retail">
-        <h2 class="open-sans-light">Retail &amp; Smart Shelves</h2>
+        <h2 class="open-sans-light">Smart Retail</h2>
       </a>
     </div>
     <div class="columns small-12 medium-6">
       <a href="/retail-robotics-medical" class="quadrant__inner blue--grad quadrant--robotics">
-        <h2 class="open-sans-light">Robotics &amp; Medical</h2>
+        <h2 class="open-sans-light">Robotics &amp; Other Applications</h2>
       </a>
     </div>
   </div>
@@ -73,27 +80,34 @@ description: Vayyar develops safe, mobile, low cost 3D imaging sensors, enabling
   </div>
 </div>
 
-<div class="section--padded">
-  <div class="row align-left">
+<div class="section">
+  <div class="row">
     <div class="columns text-center medium-text-left">
       <h2 class="open-sans-light">Investors</h2>
     </div>
   </div>
-  <div class="row align-justify push--40">
-    <div class="columns small-12 medium-expand text-center push--small-20">
-      <a href="https://www.battery.com/" target="_blank"><img src="/assets/images/bv.jpg" /></a>
+
+  <div class="row push--medium-40 align-center">
+    <div class="columns small-5 medium-expand text-center push--20">
+      <a href="https://www.battery.com/" target="_blank"><img width="100%" height="auto" src="/assets/images/bv.jpg" /></a>
     </div>
-    <div class="columns small-12 medium-expand text-center push--small-20">
-      <a href="https://www.bvp.com/" target="_blank"><img src="/assets/images/bessemer.jpg" /></a>
+    <div class="columns small-5 medium-expand text-center push--20">
+      <a href="https://www.bvp.com/" target="_blank"><img width="100%" height="auto" src="/assets/images/bessemer.jpg" /></a>
     </div>
-    <div class="columns small-12 medium-expand text-center push--small-20">
-      <a href="http://www.icv.vc/" target="_blank"><img src="/assets/images/icv.jpg" /></a>
+    <div class="columns small-5 medium-expand text-center push--20">
+      <a href="http://www.waldenintl.com/index.aspx" target="_blank"><img width="100%" height="auto" src="/assets/images/wrv.jpg" /></a>
     </div>
-    <div class="columns small-12 medium-expand text-center push--small-20">
-      <a href="http://www.waldenintl.com/index.aspx" target="_blank"><img src="/assets/images/wrv.jpg" /></a>
+    <div class="columns small-5 medium-expand text-center push--20">
+      <a href="https://www.investec.com" target="_blank"><img width="100%" height="auto" src="/assets/images/investec.jpg" /></a>
     </div>
-    <div class="columns small-12 medium-expand text-center push--small-20">
-      <a href="http://www.amiticapital.com/" target="_blank"><img src="/assets/images/amiti.jpg" /></a>
+    <div class="columns small-5 medium-expand text-center push--20">
+      <a href="http://www.icv.vc/" target="_blank"><img width="100%" height="auto" src="/assets/images/icv.jpg" /></a>
+    </div>
+    <div class="columns small-5 medium-expand text-center push--20">
+      <a href="http://clal.org/" target="_blank"><img width="100%" height="auto" src="/assets/images/clal.jpg" /></a>
+    </div>
+    <div class="columns small-5 medium-expand text-center push--20">
+      <a href="http://www.amiticapital.com/" target="_blank"><img width="100%" height="auto" src="/assets/images/amiti.jpg" /></a>
     </div>
   </div>
 </div>
