--- a/source/views/pages/press/index.hbs
+++ b/source/views/pages/press/index.hbs
@@ -9,126 +9,43 @@ canon: '/press/'
 
 <div class="page-hero page-hero--tech row expanded align-middle text-center">
   <div class="columns">
-    <h1 class="open-sans-light">Press Center</h1>
+    <h1 class="open-sans-light">Press Kit</h1>
   </div>
 </div>
 
-<div class="section section--angle">
+<div class="section">
 
-
-  <div class="row push--60">
-    <div class="columns">
-      <h2 class="open-sans-light">Press</h2>
+  <div class="row push--30 push--medium-70">
+    <div class="columns small-12 large-5 text-center">
+      <h3 class="open-sans-bold fc--aqua">
+	       <a href="/assets/media/Vayyar-press-release-121417.pdf" target="_blank">
+		       Press Release and FAQ
+	       </a>
+	  </h3>
+    </div>
+    <div class="columns push--30 small-12 large-3 text-center">
+      <h3 class="open-sans-bold fc--aqua">
+		<a href="/assets/media/Vayyar-images.zip">
+			Images
+		</a>
+	  </h3>
+    </div>
+	<div class="columns push--30 small-12 large-4 text-center">
+      <h3 class="open-sans-bold fc--aqua">
+		<a href=" https://www.youtube.com/channel/UC1-pUD8UkDWCjkgLD-WoheQ/videos" target="_blank">
+			Video Assets
+		</a>
+	  </h3>
     </div>
   </div>
 
-  <div class="row push--40">
+  <div class="row push--60 push--medium-70">
     <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
-      <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
-      </p>
-    </div>
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
-      <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
-      </p>
-    </div>
-  </div>
-
-  <div class="row push--40">
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
-      <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
-      </p>
-    </div>
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
-      <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
-      </p>
-    </div>
-  </div>
-
-  <div class="row push--40">
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
-      <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
-      </p>
-    </div>
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
-      <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
-      </p>
-    </div>
-  </div>
-
-  <div class="row push--80">
-    <div class="columns">
-      <h2 class="open-sans-light">Media</h2>
-    </div>
-  </div>
-
-  <div class="row push--40">
-    <div class="columns">
-      <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <a href="#" class="btn btn--square">Download</a>
-    </div>
-    <div class="columns">
-      <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <a href="#" class="btn btn--square">Download</a>
-    </div>
-  </div>
-
-  <div class="row push--40">
-    <div class="columns">
-      <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <a href="#" class="btn btn--square">Download</a>
-    </div>
-    <div class="columns">
-      <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <a href="#" class="btn btn--square">Download</a>
-    </div>
-  </div>
-
-  <div class="row push--80">
-    <div class="columns">
-      <h2 class="open-sans-light">Downloads</h2>
-    </div>
-  </div>
-
-  <div class="row push--40">
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Headline Here</h3>
-      <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
-      </p>
-      <a href="#" class="btn btn--square">Download</a> <a href="#" class="btn btn--square">Download</a>
-    </div>
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Headline Here</h3>
-      <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
-      </p>
-      <a href="#" class="btn btn--square">Download</a> <a href="#" class="btn btn--square">Download</a>
+      <h4 class="open-sans-bold fc--mg text-center">Press Contact: <a href="mailto:vayyar@bigfishpr.com" target="_blank"> vayyar@bigfishpr</a></h4>
     </div>
   </div>
 
 
-
-  {{>vayyar-xsell}}
 
 <!-- /Serction -->
 </div>
