--- a/source/views/pages/retail-robotics-medical/index.hbs
+++ b/source/views/pages/retail-robotics-medical/index.hbs
@@ -1,6 +1,6 @@
 ---
 title: Vayyar
-heading: 'Retail, Smart Shelves, Robotics, and Medical'
+heading: 'Retail, Smart Office, Robotics & Medical'
 description: Vayyar develops safe, mobile, low cost 3D imaging sensors, enabling applications ranging from breast cancer screening to detecting water leakage, food safety monitoring and many more.
 canon: '/retail-robotics-medical/'
 ---
@@ -9,122 +9,133 @@ canon: '/retail-robotics-medical/'
 
 <div class="page-hero page-hero--robotics row expanded align-middle text-center">
   <div class="columns">
-    <h1 class="open-sans-light">Retail, Smart Shelves, Robotics &amp; Medical</h1>
+    <h1 class="open-sans-light">Retail, Smart Office, Robotics & Medical</h1>
   </div>
 </div>
 
-<div class="section section--angle-purple">
+<div class="section section--angle">
 
-  <div class="row align-center">
-    <div class="columns large-10 text-center">
-      <h3 class="open-sans-light fc--mg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</h3>
+  <div class="row push--20 push--medium-80 align-justify align-top">
+    <div class="columns text-center">
+      <h2 class="open-sans-light">Applications</h2>
     </div>
   </div>
 
-  <div class="row push--60 align-justify">
-    <div class="columns large-3">
-      <h2 class="open-sans-light">Retail</h2>
-      <h3 class="open-sans-bold fc--aqua push--20">Smart Shelf</h3>
-      <h3 class="open-sans-bold fc--aqua push--20">Smart Hotel/Office</h3>
+  <div class="row push--medium-40 align-center align-middle">
+    <div class="columns small-12 medium-expand text-center">
+      <h3 class="open-sans-bold fc--aqua push--20"><a class="js-jumplink" href="#retail">Retail</a></h3>
     </div>
-    <div class="columns large-3">
-      <h2 class="open-sans-light">Robotics</h2>
-      <h3 class="open-sans-bold fc--aqua push--20">Personal Robots</h3>
-      <h3 class="open-sans-bold fc--aqua push--20">Manufacturing &amp; Industrial Robots </h3>
+    <div class="columns small-12 medium-expand text-center">
+      <h3 class="open-sans-bold fc--aqua push--20"><a class="js-jumplink" href="#robotics">Robotics</a></h3>
     </div>
-    <div class="columns large-3">
-      <h2 class="open-sans-light push--20">Medical</h2>
-      <h3 class="open-sans-bold fc--aqua push--20">Screening</h3>
+    <div class="columns small-12 medium-expand text-center">
+      <h3 class="open-sans-bold fc--aqua push--20"><a class="js-jumplink" href="#office">Smart Office &amp; Lighting</a></h3>
+    </div>
+    <div class="columns small-12 medium-expand text-center">
+      <h3 class="open-sans-bold fc--aqua push--20"><a class="js-jumplink" href="#medical">Medical</a></h3>
     </div>
   </div>
 
-  <div class="row push--100">
-    <div class="columns text-left">
+  <div class="row push--60 push--medium-200" id="retail">
+    <div class="columns text-center medium-text-left">
       <h1 class="open-sans-bold">Retail</h1>
     </div>
   </div>
-  <div class="row push--60 align-middle">
-    <div class="columns">
-      <img src="http://placehold.it/600x400" />
+  <div class="row push--30 push--medium-60 align-middle align-justify">
+    <div class="columns small-12 large-5">
+      <img src="/assets/images/retail-smart-shelf.jpg" />
     </div>
-    <div class="columns">
-      <h2 class="open-sans-light">Smart Shelf</h2>
-      <ul class="feature-list push--30">
-        <li>Identify/count number of people in front of shelf</li>
-        <li>Map exact location/product person is reaching out to in shelf</li>
-        <li>Monitor person's vital signs when in front of shelf (heartbeat/breathing/activity)</li>
+    <div class="columns push--30 large-6">
+      <h2 class="open-sans-light">Smart Shelves</h2>
+      <ul class="feature-list push--30 push--medium-30">
+        <li>Count and monitor people browsing or passing by shelves</li>
+        <li>Measure consumer intent – monitor gestures, movements and interest level for products</li>
+        <li>Monitor shelf inventory</li>
       </ul>
     </div>
   </div>
 
-  <div class="row push--200 align-middle">
-    <div class="columns">
-      <h2 class="open-sans-light">Smart Hotel / Office</h2>
-      <ul class="feature-list push--30">
-        <li>Count number of people in the room/office/lobby/elevatore</li>
-        <li>Monitor people's position/location (including fall detection)</li>
-        <li>Provide sleep score of hotel guests (correlate sleep-score changes to room/bed changes)</li>
-        <li>Alert on people's location and state during fire</li>
+  <div class="row push--60 push--medium-200" id="retail">
+    <div class="columns text-center medium-text-left">
+      <h1 class="open-sans-bold">Smart Office</h1>
+    </div>
+  </div>
+  <div class="row push--30 push--medium-60 align-middle align-justify" id="office">
+    <div class="columns small-12 large-6">
+      <h2 class="open-sans-light">Smart Office & Lighting</h2>
+      <ul class="feature-list push--30 push--medium-30">
+        <li>Count the number of people in a room or defined area</li>
+        <li>Monitor people's location, and wellbeing for office automation, security and energy efficiency</li>
+        <li>During a fire, provide updates in real time of wellbeing, location or falls</li>
       </ul>
     </div>
-    <div class="columns">
-      <img src="http://placehold.it/600x400" />
+    <div class="columns push--30 small-12 large-5">
+      <img src="/assets/images/retail-smart-office.jpg" />
     </div>
   </div>
 
-  <div class="section section--gray">
+  <div class="section section--gray push--60 push--medium-200" id="robotics">
     <div class="row">
-      <div class="columns text-left">
+      <div class="columns text-center medium-text-left">
         <h1 class="open-sans-bold">Robotics</h1>
       </div>
     </div>
-    <div class="row push--60 align-middle">
-      <div class="columns">
-        <img src="http://placehold.it/600x400" />
+    <div class="row push--60 push--medium-60 align-middle align-justify">
+      <div class="columns small-12 large-5">
+        <img src="/assets/images/retail-persomal-robotics.jpg" />
       </div>
-      <div class="columns">
-        <h2 class="open-sans-light">Personal Robots</h2>
-        <ul class="feature-list push--30">
-          <li>Obstacles monitoring and classification <br /> <small>(i.e. separate water from cable)</small></li>
-          <li>Detect and track people around the robot and monitor their vital signs <br /> <small>(i.e. elderly care)</small></li>
-          <li>Navigation assistance around the room/office</li>
+      <div class="columns push--30 small-12 large-6">
+        <h2 class="open-sans-light">Personal Robots <br /><small>Home & Commercial</small></h2>
+        <ul class="feature-list push--30 push--medium-30">
+          <li>Monitor, classify and map the location of obstacles in a home</li>
+          <li>Detect and monitor people around the robot (i.e. elderly care)</li>
+          <li>Provide navigation assistance for rooms or offices </li>
         </ul>
       </div>
     </div>
-    <div class="row push--200 align-middle">
-      <div class="columns">
-        <h2 class="open-sans-light">Manufacturing <br />/ Industrial Robots</h2>
-        <ul class="feature-list push--30">
-          <li>Enable human-robot interaction in production lines</li>
-          <li>Obstacle detection avoidance for robot moving parts</li>
-          <li>Direct robot arms towards targets</li>
-          <li>Industry 4.0 support</li>
+    <div class="row push--30 push--medium-80 align-middle align-justify">
+      <div class="columns small-12 large-6">
+        <h2 class="open-sans-light">Manufacturing <br />& Industrial Robots</h2>
+        <ul class="feature-list push--30 push--medium-30">
+          <li> Presence awareness that identifies when humans enter robotic manufacturing zones and monitors their proximity to machines</li>
+          <li>Robotic Limb Safety - Avoid obstacles and humans</li>
+          <li>Accurately direct robotic arms toward targets</li>
+          <li>Surface level monitoring</li>
         </ul>
       </div>
-      <div class="columns">
-        <img src="http://placehold.it/600x400" />
+      <div class="columns small-12 push--30 large-5">
+        <img src="/assets/images/retail-robotics.jpg" />
       </div>
     </div>
   </div>
 
-  <div class="section section--trans">
+  <div class="section section--trans" id="medical">
     <div class="row">
-      <div class="columns text-left">
+      <div class="columns text-center medium-text-left">
         <h1 class="open-sans-bold">Medical</h1>
       </div>
     </div>
-    <div class="row push--60 align-middle">
-      <div class="columns">
-        <img src="http://placehold.it/600x400" />
+    <div class="row push--60 push--medium-60 align-middle align-justify">
+      <div class="columns small-12 large-5">
+        <img src="/assets/images/retail-medical.jpg" />
       </div>
-      <div class="columns">
-        <h2 class="open-sans-light">Screening</h2>
-        <ul class="feature-list push--30">
-          <li>Identify/count number of people in front of shelf</li>
-          <li>Map exact location/product person is reaching out to in shelf</li>
-          <li>Monitor person's vital signs when in front of shelf <br /> <small>(heartbeat/breathing/activity)</small></li>
+      <div class="columns push--30 small-12 large-6">
+        <h2 class="open-sans-light">Medical Screening</h2>
+        <ul class="feature-list push--30 push--medium-30">
+          <li>Early stage breast cancer detection device </li>
+          <li>Provides 3D scan of breast tissue that identifies tumors in under 5 seconds</li>
+          <li>Handheld, low cost, non-ionizing, non-painful, low-cost system</li>
         </ul>
       </div>
+    </div>
+  </div>
+
+  <div class="row push--30 push--medium-60">
+    <div class="columns text-center">
+      <hr />
+      <h2 class="open-sans-light push--medium-80">Contact us for details and packages</h2>
+      <a class="btn btn--square push--20 push--medium-20 js-jumplink" href="#contact-form">Enquire Now</a>
+      <hr class="push--medium-60" />
     </div>
   </div>
 
