--- a/source/views/partials/contact-form.hbs
+++ b/source/views/partials/contact-form.hbs
@@ -1,24 +1,35 @@
 <div class="section--contact" id="contact-form" class="js-jumplink">
-  <div class="row align-left">
-    <div class="columns">
-      <h2 class="open-sans-light">Contact Us</h2>
+  <div class="row align-justify align-middle">
+    <div class="columns small-12 medium-expand text-center medium-text-left">
+      <h2 class="open-sans-light">Contact Us </h2>
+    </div>
+    <div class="columns text-right small-10 small-offset-1 medium-expand push--20">
+      <div class="hire-bug">
+        <h2 class="open-sans-light">We're Hiring! </h2>
+        <p class="lead open-sans-bold">
+          <a href="https://vayyar.workable.com/j/4D7DDD5D3D" target="_blank">Start Your Application Now</a>
+        </p>
+      </div>
     </div>
   </div>
   <form class="small-12" action="https://vayyar.wufoo.com/forms/zf4tx541enmmxh/#public" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post">
-    <div class="row push--40">
+    <div class="row push--30 medium--push-40 push--medium-40">
       <div class="columns small-12 large-5">
         <label>Reason for Contact</label>
-        <select id="changeWufooForm">
-  				  <option value="Business Partnerships"> Business Partnerships</option>
-  				  <option value="Request for Quote">Request for Quote</option>
-  				  <option value="Career Opportunities">Career Opportunities</option>
-  				  <option value="Walabot">Walabot</option>
-  				  <option value="Technical Queries">Technical Queries</option>
-  				  <option value="Press">Press</option>
-  				  <option value="Suppliers">Suppliers</option>
-  				  <option value="Investment">Investment</option>
-  				  <option value="Other">Other</option>
-  			</select>
+        <label class="select-mask">
+          <select id="changeWufooForm">
+              <option value="General Inquiries"> General Inquiries</option>
+              <option value="Business Partnerships"> Business Partnerships</option>
+    				  <option value="Request for Quote">Request for Quote</option>
+    				  <option value="Career Opportunities">Career Opportunities</option>
+    				  <option value="Walabot">Walabot</option>
+    				  <option value="Technical Queries">Technical Queries</option>
+    				  <option value="Press">Press</option>
+    				  <option value="Suppliers">Suppliers</option>
+    				  <option value="Investment">Investment</option>
+    				  <option value="Other">Other</option>
+    			</select>
+        </label>
 
         <label>Your Name</label>
         <input id="Field3" name="Field3" type="text" />
@@ -30,11 +41,11 @@
         <input id="Field5" name="Field5" type="text" />
       </div>
 
-      <div class="columns small-12 medium-expand push--small-20">
+      <div class="columns small-12 medium-expand push--20">
         <label>Comments</label>
         <div class="text-right">
           <textarea id="Field6" name="Field6"></textarea>
-          <button class="push--50 mobile-full">Send</button>
+          <button class="push--30 push--medium-50 mobile-full">Send</button>
           <input type="hidden" id="idstamp" name="idstamp" value="FAblbosE2VnSJe2iz7G6noJWxwhY9KAuhxWedheEoHA=">
         </div>
       </div>
