--- a/source/views/partials/main-header.hbs
+++ b/source/views/partials/main-header.hbs
@@ -8,10 +8,13 @@
     <button class="mobile-nav-toggle hide-for-large js-mobile-toggle"><i class="fa fa-bars"></i></button>
     <ul class="main-nav">
       <li>
-        <a href="#">Divisions <i class="fa fa-caret-down"></i></a>
+        <a href="#" class="show-for-large">Divisions <i class="fa fa-caret-down"></i></a>
         <ul>
           <li>
             <a href="/automotive">Automotive</a>
+          </li>
+          <li>
+            <a href="/smart-home">Smart Home</a>
           </li>
           <li>
             <a href="/retail-robotics-medical#robotics">Robotics</a>
@@ -20,7 +23,7 @@
             <a href="/retail-robotics-medical#retail">Retail</a>
           </li>
           <li>
-            <a href="/smart-home">Smart Home</a>
+            <a href="/retail-robotics-medical#medical">Medical</a>
           </li>
         </ul>
       </li>
@@ -31,7 +34,7 @@
         <a href="/about">About</a>
       </li>
       <li>
-        <a href="/press">Press</a>
+        <a href="/press">Press Kit</a>
       </li>
       <li>
         <a href="#contact-form" class="js-jumplink">Contact</a>
@@ -39,3 +42,25 @@
     </ul>
   </nav>
 </header>
+
+<div class="ipb show-for-large">
+  <div class="ipb__banner row expanded align-justify align-middle">
+    <div class="columns small-12 medium-expand">
+      <div class="row collapse">
+        <div class="columns shrink">
+          <img src="/assets/images/ces-bug.png" width="60" height="auto" />
+        </div>
+        <div class="columns pad-col">
+          <h5 class="open-sans-bold">We'll be at CES! <span class="brow">Booth 40420</span></h5>
+          <p class="open-sans-semi-bold">
+            Smart Home &bull; Automotive &bull; Retail &bull;  + more!
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="columns small-12 medium-expand push--20 text-right">
+      <a class="btn btn--square btn--inv js-bann-hide js-allow" href="https://vayyar.wufoo.eu/forms/meet-vayyar-at-ces-2018/" target="_blank">Schedule a meeting with us</a>
+      <a class="btn btn--square btn--inv js-bann-hide" href="https://vayyar.wufoo.eu/forms/meet-vayyar-at-ces-2018/" target="_blank"><i class="fa fa-close"></i></a>
+    </div>
+  </div>
+</div>
