--- a/source/views/partials/site-footer.hbs
+++ b/source/views/partials/site-footer.hbs
@@ -3,16 +3,24 @@
     <div class="columns small-12 large-3">
       <ul class="footer__ul">
         <li class="footer__logo">
-          <div class="main-logo__wrapper main-logo__wrapper--white">
+          <div class="main-logo__wrapper main-logo__wrapper--white push--medium-30">
             {{>logo}}
           </div>
         </li>
         <li>
-          <a target="_blank" href="https://www.google.co.il/maps/place/Avraham+Giron+St+3,+Yehud/@32.0271545,34.8925806,17z/data=!3m1!4b1!4m5!3m4!1s0x151d350f94128bd3:0x794c7ab1787023da!8m2!3d32.0271545!4d34.8947693">
-            11 Altalef Street <br />
-            POB. 325, Yehud  <br />
-            56216, Israel
+          <a target="_blank" href="https://www.google.com/maps/place/Avraham+Giron+St+3,+Yehud,+Israel/@32.0271545,34.8925806,17z/data=!3m1!4b1!4m5!3m4!1s0x151d350f94128bd3:0x794c7ab1787023da!8m2!3d32.0271545!4d34.8947693">
+            3 Avraham Giron <br />
+            Yehud 5621717 <br />
+            Israel
           </a>
+        </li>
+        <li>
+          <div class="push--medium-20">
+              <a href="mailto:vayyar@bigfishpr.com">Press Contact</a>
+          </div>
+        </li>
+        <li>
+          <a href="/press">Press Kit</a>
         </li>
       </ul>
     </div>
@@ -22,11 +30,11 @@
           Vayyar.com
         </li>
         <li><a href="/automotive">Automotive</a></li>
-        <li><a href="/retail-robotics-medical">Robotics</a></li>
         <li><a href="/smart-home">Smart Home</a></li>
+        <li><a href="/retail-robotics-medical">Robotics</a></li>
         <li><a href="/retail-robotics-medical">Retail</a></li>
         <li><a href="/technology">Technology</a></li>
-        <li><a href="/press">Press</a></li>
+        <li><a href="/about">About</a></li>
         <li><a href="#contact-form" class="js-jumplink">Contact</a></li>
       </ul>
     </div>
@@ -42,9 +50,9 @@
     <div class="columns small-12 large-3">
       <ul class="footer__ul">
         <li>
-          We're Hiring
+          We're Hiring!
         </li>
-        <li><a href="https://vayyar.workable.com/j/4D7DDD5D3D" target="_blank">Start Application</a></li>
+        <li><a href="https://vayyar.workable.com/j/4D7DDD5D3D" target="_blank">Apply Now &raquo;</a></li>
       </ul>
     </div>
   </div>
