--- a/source/views/partials/vayyar-xsell.hbs
+++ b/source/views/partials/vayyar-xsell.hbs
@@ -1,23 +1,27 @@
 {{#unless about}}
 {{#unless tech}}
 {{#unless smart-home}}
-<div class="row push--200">
-  <div class="columns">
+<div class="row push--100 push--medium-100">
+  <div class="columns text-center">
     <h2 class="open-sans-light">Vayyar’s Advantages</h2>
   </div>
 </div>
-<div class="row align-middle push--60">
-  <div class="columns large-5 text-center">
-    <img src="/assets/images/vayyar-chip-lg.png" />
-  </div>
-  <div class="columns large-5">
-    <ul class="feature-list">
-      <li>No privacy violation</li>
-      <li>Robust solution (not sensitive to different light condition, smoke, fog, ice, snow, rain, etc.)</li>
-      <li>Concealed installation (no design damage)</li>
-      <li>Leveraging breakthrough number of antennas for high field-of-view and accuracy detection</li>
-      <li>Customizable system to fit different form-factor and performance/FoV requirements</li>
-    </ul>
+<div class="row push--medium-60 align-center">
+  <div class="columns small-12 large-11">
+    <div class="row align-middle align-center">
+      <div class="columns large-6 text-center">
+        <img src="/assets/images/chip-how.jpg" />
+      </div>
+      <div class="columns small-12 large-5">
+        <ul class="feature-list">
+          <li>No cameras, avoids violating privacy</li>
+          <li>Seamless - Agnostic to lighting and weather conditions</li>
+          <li>Preserves design integrity, can be placed inside a concealed installation</li>
+          <li>Wide field-of-view and accurate objects detection</li>
+          <li>Customizable systems to fit different form factors, performance and field-of-view requirements</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 {{/unless}}
@@ -25,95 +29,97 @@
 {{/unless}}
 
 {{#if tech}}
-<div class="row push--200">
-  <div class="columns">
+<div class="row push--60 push--medium-200">
+  <div class="columns text-center">
     <h2 class="open-sans-light">Advantages</h2>
   </div>
 </div>
-<div class="row align-middle push--60 align-justify">
-  <div class="columns large-4">
-    <img src="/assets/images/vayyar-icon-2x.png" />
-  </div>
-  <div class="columns large-7 text-left">
-    <h3 class="open-sans-bold">See-through Materials</h3>
-    <p class="lead open-sans-light">Unique field of view and concealed installation</p>
-    <h3 class="push--30 open-sans-bold">Works in all conditions</h3>
-    <p class="lead open-sans-light">Agnostic to smoke, fog, dark</p>
-    <h3 class="push--30 open-sans-bold">Protects Privacy</h3>
-    <p class="lead open-sans-light">No camera, wearable or privacy violation</p>
-    <h3 class="push--30 open-sans-bold">Compact, low power & safe</h3>
+<div class="row push--30 push--medium-60 align-center">
+  <div class="columns small-12 large-9">
+    <div class="row align-justify align-middle">
+      <div class="columns small-7 small-offset-2 large-offset-0 text-center large-4">
+        <img src="/assets/images/vayyar-icon-2x.png" width="100%" height="auto"/>
+      </div>
+      <div class="columns push--30 small-10 small-offset-1 large-6 text-left">
+        <h3 class="open-sans-bold">See-through Materials</h3>
+        <p class="lead open-sans-light">Unique field of view and concealed installation</p>
+        <h3 class="push--30 push--medium-30 open-sans-bold">Seamless</h3>
+        <p class="lead open-sans-light">Agnostic to lighting and weather conditions </p>
+        <h3 class="push--30 push--medium-30 open-sans-bold">Privacy Protection</h3>
+        <p class="lead open-sans-light">No cameras or wearables</p>
+        <h3 class="push--30 push--medium-30 open-sans-bold">Compact, low power & safe</h3>
+      </div>
+    </div>
   </div>
 </div>
 {{/if}}
 
 {{#unless about}}
 {{#unless tech}}
-<div class="row push--200">
+<div class="row push--100 push--medium-120">
   <div class="columns text-center">
     <h2 class="open-sans-light">Get started with Vayyar</h2>
     <h3 class="open-sans-light fc--mg">Select your evaluation package</h3>
   </div>
 </div>
 
-<div class="row push--60">
+<div class="row push--60 push--medium-60">
 
-  <div class="columns square">
+  <div class="columns small-12 medium-expand square">
     <h3 class="open-sans-bold">Basic Package</h3>
-    <ul class="lead open-sans-light push--20">
-      <li>Advanced HW</li>
-      <li>Single function SW (people location, obstacles map, heart-rate/breathing) - GUI</li>
-      <li>1-month support</li>
+    <ul class="lead open-sans-light push--medium-20">
+      <li>Advanced Hardware</li>
+      <li>Single function software - people location, obstacles map, heart-rate/breathing - GUI</li>
     </ul>
-    <a href="#contact-form" class="js-jumplink btn btn--square push--20">Enquire Now</a>
+    <a href="#contact-form" class="js-jumplink btn btn--square push--medium-20">Enquire Now</a>
   </div>
 
-  <div class="columns square">
+  <div class="columns small-12 medium-expand push--20 square">
     <h3 class="open-sans-bold">Advanced Package</h3>
-    <ul class="lead open-sans-light push--20">
-      <li>Dedicated advanced HW (off-the-shelf or tailored)</li>
-      <li>Multi-functions SW (people location, obstacles map, heart-rate/breathing) – GUI + API</li>
+    <ul class="lead open-sans-light push--medium-20">
+      <li>Dedicated advanced hardware solution - off-the-shelf or tailored</li>
+      <li>Multi-functions software - people location, obstacles map, breathing – GUI + API</li>
       <li>3-months support</li>
       <li>3-days face-to-face meeting for training, integration and mutual testing</li>
       <li>Reference design</li>
     </ul>
-    <a href="#contact-form" class="js-jumplink btn btn--square push--20">Enquire Now</a>
+    <a href="#contact-form" class="js-jumplink btn btn--square push--medium-20">Enquire Now</a>
   </div>
 
 </div>
 {{/unless}}
 {{/unless}}
 
-{{#unless smart-home}}
+
 {{#unless about}}
-<div class="row push--200">
+<div class="row push--medium-200 show-for-large">
 {{else}}
-<div class="row push--140">
+<div class="row push--medium-100 show-for-large">
 {{/unless}}
   <div class="columns text-left">
     <h2 class="open-sans-light">More Divisions</h2>
   </div>
 </div>
 
-<div class="row expanded push--60">
-  <a class="columns square square--link" href="/retail-robotics-medical#robotics">
+<div class="row expanded push--medium-60 show-for-large">
+  <a class="columns small-12 medium-expand square square--link" href="/retail-robotics-medical#robotics" style="background-image: url(/assets/images/robotics.jpg);">
     <div class="square__inner">
       <h3 class="open-sans-light">Robotics</h3>
     </div>
   </a>
-  <a class="columns square square--link" href="/smart-home">
+  <a class="columns small-12 medium-expand square square--link" href="/smart-home" style="background-image: url(/assets/images/smart-home.jpg);">
     <div class="square__inner">
       <h3 class="open-sans-light">Smart Home</h3>
     </div>
   </a>
-  <a class="columns square square--link" href="/retail-robotics-medical#retail">
+  <a class="columns small-12 medium-expand square square--link" href="/retail-robotics-medical#retail" style="background-image: url(/assets/images/retail-card.jpg);">
     <div class="square__inner">
       <h3 class="open-sans-light">Retail</h3>
     </div>
   </a>
-  <a class="columns square square--link" href="/technology">
+  <a class="columns small-12 medium-expand square square--link" href="/technology" style="background-image: url(/assets/images/vayyar-chip.jpg);">
     <div class="square__inner">
       <h3 class="open-sans-light">Technology</h3>
     </div>
   </a>
 </div>
-{{/unless}}
