--- a/source/assets/scss/base/_settings.scss
+++ b/source/assets/scss/base/_settings.scss
@@ -4,7 +4,7 @@
 // ---------
 
 $global-font-size: 100%;
-$global-width: rem-calc(1400);
+$global-width: rem-calc(1200);
 $global-lineheight: 1.2;
 $foundation-palette: (
   primary: #1779ba,
@@ -69,7 +69,7 @@ $header-color: inherit;
 $header-lineheight: 1.2;
 $header-margin-bottom: 0.5rem;
 $header-styles: (
-  xsmall: (
+  small: (
     'h1': ('font-size': 48),
     'h2': ('font-size': 30),
     'h3': ('font-size': 24),
@@ -98,7 +98,7 @@ $code-font-weight: $global-weight-normal;
 $code-background: $light-gray;
 $code-border: 1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
-$anchor-color: $primary-color;
+$anchor-color: #00aeef;
 $anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
 $anchor-text-decoration: none;
 $anchor-text-decoration-hover: none;
