--- a/source/assets/scss/elements/_form.scss
+++ b/source/assets/scss/elements/_form.scss
@@ -1,4 +1,4 @@
-label{
+label:not(.select-mask){
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   display: inline-block;
@@ -20,11 +20,39 @@ input{
 }
 
 select{
-  padding: 1rem;
-  background: #e5e5e5;
-  width: 100%;
+  background: transparent;
+  border: none;
   font-size: 1.2rem;
   font-family: 'Open Sans', sans-serif;
+}
+
+.select-mask{
+  position: relative;
+  display: flex;
+  width: 100%;
+  min-height: 54px;
+  background: #e5e5e5;
+  overflow: hidden;
+  select{
+    z-index: 2;
+    display: inline-block;
+    flex: 0 0 120%;
+  }
+  &::after{
+    position: absolute;
+    width: 60px;
+    height: 100%;
+    background: #5c6770;
+    content: "\f0d7";
+    top:0;
+    right:0;
+    font-family: "FontAwesome";
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    z-index: 0
+  }
   & + label{
     margin-top: 1rem;
   }
