--- a/source/assets/scss/modules/_feature-quadrant.scss
+++ b/source/assets/scss/modules/_feature-quadrant.scss
@@ -57,8 +57,6 @@
     &::before { z-index: 0; background-size: cover; background-position: center center; transition-duration: 20s; transition-timing-function: linear; transition-property: all;}
 
     &:hover{
-      h2{ transform: translateY(-50px); }
-      h3{ opacity: 0; }
       &::before{ transform: scale3d(2, 2, 2); }
     }
   }
@@ -94,32 +92,32 @@
   }
 }
 
-.red--grad{
-  &::after{
-    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(219,26,13, .5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  }
-}
+// .red--grad{
+//   &::after{
+//     background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(219,26,13, .5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//   }
+// }
+//
+// .blue--grad{
+//   &::after{
+//     background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(#1c69d4, .5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//   }
+// }
+//
+// .green--grad{
+//   &::after{
+//     background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(#207735, .5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//   }
+// }
+//
+// .purple--grad{
+//   &::after{
+//     background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(#7500d8, .5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//   }
+// }
 
-.blue--grad{
-  &::after{
-    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(#1c69d4, .5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  }
-}
-
-.green--grad{
-  &::after{
-    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(#207735, .5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  }
-}
-
-.purple--grad{
-  &::after{
-    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(#7500d8, .5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  }
-}
-
-.yellow--grad{
-  &::after{
-    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(#fabb05, .5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  }
-}
+// .yellow--grad{
+//   &::after{
+//     background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(#fabb05, .5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//   }
+// }
