--- a/source/assets/scss/modules/_hero.scss
+++ b/source/assets/scss/modules/_hero.scss
@@ -2,7 +2,11 @@
   background: white;
   margin-top: 85px;
   padding-bottom: 2rem;
-  @include breakpoint(medium up){
+  @include breakpoint(medium down){
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  @include breakpoint(large up){
     background: white url('/assets/images/vayyar-chip-hero.jpg') right center no-repeat;
     padding-bottom: 0;
   }
@@ -11,13 +15,21 @@
     box-sizing: border-box;
     @include breakpoint(medium up){
       min-height: 580px;
-      padding-top: 4rem;
+      padding-top: .5rem;
     }
+  }
+  h1{
+    padding-right: 1rem;
   }
 }
 
 .page-hero{
-  min-height: 450px;
+  @include breakpoint(medium down){
+    padding: 2rem 0;
+  }
+  @include breakpoint(large up){
+    min-height: 450px;
+  }
   background-size: cover;
   background-position: top center;
   margin-top: 85px;
@@ -36,7 +48,7 @@
   &--tech{
     background-image: url('/assets/images/tech-head.jpg');
   }
-  h1{
+  h1, h2{
     color: white;
     text-shadow: 0px 2px 6px #222;
   }
