--- a/source/assets/scss/modules/_main-nav.scss
+++ b/source/assets/scss/modules/_main-nav.scss
@@ -47,7 +47,7 @@
 .main-nav > li:not(:last-child) > a{
   padding: 10px;
   width: 100%;
-  @include breakpoint(medium up){
+  @include breakpoint(large up){
     padding: 30px 20px;
   }
   display: inline-block;
@@ -73,7 +73,7 @@
   margin: 0;
   width: 100%;
   background: white;
-  @include breakpoint(medium up){
+  @include breakpoint(large up){
     display: none;
     position: absolute;
     top: 100%;
