--- a/source/assets/scss/modules/_popup.scss
+++ b/source/assets/scss/modules/_popup.scss
@@ -10,6 +10,29 @@
   top:0;
   left:0;
   visibility: hidden;
+  &--video{
+    .popup__inner{
+      min-width: 60%;
+      padding-top: 0;
+      .popup__close{
+        margin-top: -60px;
+        background: transparent;
+        z-index: 999;
+      }
+      iframe{
+        position: absolute;
+        top:0;
+        left:0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+      }
+      img{
+        position: relative;
+        z-index: 0;
+      }
+    }
+  }
   &.isActive{
     visibility: visible;
   }
@@ -28,6 +51,7 @@
     border-radius: 0px;
     text-align: right;
     padding-right: 20px;
+    z-index: 22;
     cursor: pointer;
   }
 }
