--- a/source/views/pages/about/index.hbs
+++ b/source/views/pages/about/index.hbs
@@ -1,6 +1,6 @@
 ---
 title: Vayyar
-heading: 'About Us and Press'
+heading: 'About Us'
 description: Vayyar develops safe, mobile, low cost 3D imaging sensors, enabling applications ranging from breast cancer screening to detecting water leakage, food safety monitoring and many more.
 about: true
 canon: '/about/'
@@ -10,7 +10,7 @@ canon: '/about/'
 
 <div class="page-hero page-hero--about row expanded align-middle text-center">
   <div class="columns">
-    <h1 class="open-sans-light">About Us & Press</h1>
+    <h1 class="open-sans-light">About Us</h1>
   </div>
 </div>
 
@@ -18,185 +18,178 @@ canon: '/about/'
 
   <div class="row">
     <div class="columns text-center">
-      <h2 class="open-sans-light fc--mg">Expand your vision</h2>
+      <h2 class="open-sans-light">Expand Your Vision</h2>
     </div>
   </div>
 
-  <div class="row push--60 align-middle">
-    <div class="columns large-5">
-      <h3 class="open-sans-light fc--mg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laborealiquip ex ea commodo</h3>
+  <div class="row push--30 push--medium-60 align-middle">
+    <div class="columns small-12 large-12">
+      <h3 class="open-sans-light">Vayyar develops safe, mobile, low cost 3D imaging sensors, enabling applications ranging from breast cancer screening to detecting water leakage, people tracking, vital signs, and more.</h3>
+      <p class="lead open-sans-light push--20 push--medium-40">
+        Founded in 2011 Vayyar started with the vision to develop a new modality for breast cancer detection by using RF to quickly and affordably look into human tissue to detect malignant growths. As the technology matured and evolved, Vayyar leveraged it to open up new capabilities and widen its application scope to additional markets including smart home, security, automotive, retail, elderly care, construction, agriculture and more.
+        <br /><br />
+        Vayyar facilitates long-term partnerships with corporations to develop tailored solutions to meet specific needs. It also provides off-the-shelf development kits to give companies hands-on experience and the ability to develop applications in-house. Vayyar has its own line of consumer products launched under the ‘Walabot’ brand.
+      </p>
     </div>
-    <div class="columns">
+    <div class="columns small-12 medium-expand push--40 push--medium-60">
       <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/T4Pb_6Yxfu0" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
 
-  <div class="row push--60">
+  <div class="row push--30 push--medium-60">
     <div class="columns">
       <h2 class="open-sans-light">Press</h2>
     </div>
   </div>
 
-  <div class="row push--40">
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
+  <div class="row push--medium-40">
+    <div class="columns small-12 medium-expand push--20">
       <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
+        <img src="/assets/images/press-bbc.png" width="60" height="auto" />
       </p>
+      <h3 class="open-sans-light fc--mg"><a href="http://www.bbc.com/news/av/technology-38608135/radar-sensor-for-the-home-which-can-see-through-walls" target="_blank">Radar sensor for the home which can 'see' through walls</a></h3>
     </div>
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
+    <div class="columns small-12 medium-expand push--20">
       <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
+        <img src="/assets/images/press-ent.png" width="60" height="auto" />
       </p>
+      <h3 class="open-sans-light fc--mg"><a href="https://www.entrepreneur.com/article/288177" target="_blank">Seeing Through Walls Is the Least Cool Thing This Tech Does</a></h3>
     </div>
   </div>
 
-  <div class="row push--40">
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
+  <div class="row push--medium-40">
+    <div class="columns small-12 medium-expand push--20">
       <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
+        <img src="/assets/images/press-tc.png" width="60" height="auto" />
       </p>
+      <h3 class="open-sans-light fc--mg"><a href="https://techcrunch.com/2017/07/13/vayyar-launches-3d-sensors-that-give-self-driving-cars-interior-awareness/" target="_blank">Vayyar launches 3D sensors that give self-driving cars interior awareness</a></h3>
     </div>
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
+    <div class="columns small-12 medium-expand push--20">
       <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
+        <img src="/assets/images/press-fast.png" width="60" height="auto" />
       </p>
+      <h3 class="open-sans-light fc--mg"><a href="https://www.fastcompany.com/3056939/with-walabot-your-phone-can-see-through-walls-and-pan-for-gold" target="_blank">With Walabot, Your Phone Can “See” Through Walls And Pan For Gold</a></h3>
     </div>
   </div>
 
-  <div class="row push--40">
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
+  <div class="row push--medium-40">
+    <div class="columns small-12 medium-expand push--20">
       <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
+        <img src="/assets/images/press-forbes.png" width="60" height="auto" />
       </p>
+      <h3 class="open-sans-light fc--mg"><a href="https://www.forbes.com/sites/jenniferhicks/2015/12/29/this-new-3d-sensor-can-help-detect-breast-cancer-or-see-through-walls/#34f75f633b19" target="_blank">This New 3D Sensor Can Help Detect Breast Cancer Or See Through Walls</a></h3>
     </div>
-    <div class="columns">
-      <h3 class="open-sans-light fc--mg">Article Headline Here</h3>
+    <div class="columns small-12 medium-expand push--20">
       <p class="lead open-sans-light fc--mg">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
+        <img src="/assets/images/press-rw.png" width="60" height="auto" />
       </p>
+      <h3 class="open-sans-light fc--mg"><a href="https://readwrite.com/2016/02/26/vayaar-walabot/" target="_blank">Vayyar's Walabot Will Transform 3D Technology As We Know It</a></h3>
     </div>
   </div>
 
-  <div class="row expanded push--60">
-    <div class="hero__creds hero__creds--color columns large-12">
-      <div class="row">
-        <p class="lead open-sans-light">
-          As seen on...
-        </p>
-      </div>
-      <div class="row">
-        <div class="columns text-center"><img src="/assets/images/tech-crunch-color.png" alt=""/></div>
-        <div class="columns text-center"><img src="/assets/images/entrepreneur-color.png" alt=""/></div>
-        <div class="columns text-center"><img src="/assets/images/forbes-color.png" alt=""/></div>
-        <div class="columns text-center"><img src="/assets/images/fast-co-color.png" alt=""/></div>
-        <div class="columns text-center"><img src="/assets/images/cnbc-color.png" alt=""/></div>
-        <div class="columns text-center"><img src="/assets/images/computer-world-color.png" alt=""/></div>
-      </div>
+  <div class="row push--60 push--medium-80">
+    <div class="columns text-center medium-text-left">
+      <h2 class="open-sans-light">TV Appearances</h2>
     </div>
   </div>
 
-  <div class="row push--80">
-    <div class="columns">
-      <h2 class="open-sans-light">Media Appearances</h2>
-    </div>
-  </div>
-
-  <div class="row push--40">
-    <div class="columns">
+  <div class="row push--50 push--medium-40">
+    <div class="columns small-12 medium-expand">
       <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/202941252" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <p><a href="https://vimeo.com/202941252">Walabot Innovation</a> from <a href="https://vimeo.com/walabot">Walabot</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
       </div>
     </div>
-    <div class="columns">
+    <div class="columns small-12 medium-expand">
       <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/202925941" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <p><a href="https://vimeo.com/202925941">Walabot on Click BBC</a> from <a href="https://vimeo.com/walabot">Walabot</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
       </div>
     </div>
   </div>
 
-  <div class="row push--40">
-    <div class="columns">
+  <div class="row push--medium-40">
+    <div class="columns small-12 medium-expand">
       <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/202925785" width="640" height="361" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <p><a href="https://vimeo.com/202925785">Penelope Cruz checks out Walabot</a> from <a href="https://vimeo.com/walabot">Walabot</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
       </div>
     </div>
-    <div class="columns">
+    <div class="columns small-12 medium-expand">
       <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qbN0OPo8uzw" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
 
-  <div class="row push--140 align-middle align-justify">
-    <div class="columns large-5">
-      <h2 class="open-sans-light">10x Awards</h2>
-      <p class="open-sans-light lead push--20">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqenim ad minim veniam, quis nostrud.
-      </p>
+  <div class="row push--60 push--medium-140 align-middle align-justify">
+    <div class="columns small-12 large-5 text-center">
+      <h2 class="open-sans-light">Recent Awards</h2>
     </div>
-    <div class="columns large-5">
+    <div class="columns small-11 small-offset-1 push--20 large-5 text-center">
       <img src="/assets/images/awards-bubble.png" />
     </div>
   </div>
 
 
-  <div class="row align-left push--140">
-    <div class="columns">
+  <div class="row align-left push--60 push--medium-140">
+    <div class="columns text-center medium-text-left">
       <h2 class="open-sans-light">Investors</h2>
     </div>
   </div>
-  <div class="row align-justify push--40">
-    <div class="columns">
+  <div class="row align-center push--medium-40">
+    <div class="columns small-5 medium-expand push--20">
       <a href="https://www.battery.com/" target="_blank"><img src="/assets/images/bv.jpg" /></a>
     </div>
-    <div class="columns">
+    <div class="columns small-5 medium-expand push--20">
       <a href="https://www.bvp.com/" target="_blank"><img src="/assets/images/bessemer.jpg" /></a>
     </div>
-    <div class="columns">
-      <a href="http://www.icv.vc/" target="_blank"><img src="/assets/images/icv.jpg" /></a>
-    </div>
-    <div class="columns">
+    <div class="columns small-5 medium-expand push--20">
       <a href="http://www.waldenintl.com/index.aspx" target="_blank"><img src="/assets/images/wrv.jpg" /></a>
     </div>
-    <div class="columns">
+    <div class="columns small-5 medium-expand push--20">
+      <a href="https://www.investec.com" target="_blank"><img src="/assets/images/investec.jpg" /></a>
+    </div>
+    <div class="columns small-5 medium-expand push--20">
+      <a href="http://www.icv.vc/" target="_blank"><img src="/assets/images/icv.jpg" /></a>
+    </div>
+    <div class="columns small-5 medium-expand push--20">
+      <a href="http://clal.org/" target="_blank"><img src="/assets/images/clal.jpg" /></a>
+    </div>
+    <div class="columns small-5 medium-expand push--20">
       <a href="http://www.amiticapital.com/" target="_blank"><img src="/assets/images/amiti.jpg" /></a>
     </div>
   </div>
 
-  <div class="row align-left push--140">
-    <div class="columns">
+  <div class="row align-left push--60 push--medium-140">
+    <div class="columns text-center medium-text-left">
       <h2 class="open-sans-light">Founders</h2>
     </div>
   </div>
-  <div class="row align-justify push--40">
-    <div class="columns">
+  <div class="row align-justify push--40 push--medium-40">
+    <div class="columns small-12 medium-expand">
       <h4 class="open-sans-semi-bold">Raviv Melamed</h4>
       <h5 class="open-sans-light">CEO and Co-Founder</h5>
-      <p class="open-sans-light push--20">
+      <p class="open-sans-light push--medium-20">
         Prior to Vayyar, Raviv was Vice- President of the Intel Architecture Group and General Manager of Intel’s Worldwide Mobile Wireless Group.
         Raviv joined Intel in 2004 as part of Intel’s acquisition of Envara, a fabless semi-conductor company based in Israel, where he served as Vice President of R&amp;D. Prior to that he held several roles in the Israel Defense Force in large scale radar and communication projects.
         Raviv holds a BSc. and MSc. in Electrical Engineering from Ben-Gurion University, Israel.
       </p>
     </div>
-    <div class="columns">
+    <div class="columns small-12 medium-expand push--30">
       <h4 class="open-sans-semi-bold">Miri Ratner</h4>
       <h5 class="open-sans-light">VP R&amp;D and Co-Founder</h5>
-      <p class="open-sans-light push--20">
+      <p class="open-sans-light push--medium-20">
         Miri has over 20 years of multidisciplinary R&amp;D experience, in Israel and the US. Prior to Vayyar, Miri served as a senior consultant of various hi-tech companies including Intel, Visonic and Siklu. Prior to that, Miri joined Alvarion (BreezeCom) at its seed stage, where she managed the R&amp;D Wireless Access department throughout the company’s IPO.
         Prior to BreezCom, Miri held various R&amp;D management and technical positions in Comverse, Tie Communications (USA) and ECI Telecom (Tadiran). Miri holds a BSc. in Mathematics and Computer Science from Bar-Ilan University, Israel
       </p>
     </div>
-    <div class="columns">
+    <div class="columns small-12 medium-expand push--30">
       <h4 class="open-sans-semi-bold">Naftali Chayat</h4>
       <h5 class="open-sans-light">CTO and Co-Founder</h5>
-      <p class="open-sans-light push--20">
+      <p class="open-sans-light push--medium-20">
         Naftali has over 30 years’ experience in signal processing, communications, radio systems and antenna technology. Prior to Vayyar,  Naftali was Chief Scientist of Alvarion (BreezeCom) where he was responsible for its core technology. Prior to BreezeCom, Naftali held several roles in an R&amp;D Department in the Israel Defense Forces, culminating as Chief Engineer. Naftali holds a BSc. in Physics and Mathematics from the Hebrew University under the auspices of “Talpiot”, an elite R&amp;D program of the Israel Defense Forces, and an MSc. in Electrical Engineering from the Technion, Israel
       </p>
     </div>
