--- a/source/views/pages/smart-home/index.hbs
+++ b/source/views/pages/smart-home/index.hbs
@@ -17,185 +17,152 @@ canon: '/smart-home/'
 <div class="section section--angle">
 
   <div class="row align-center">
-    <div class="columns text-center large-9">
-      <h3 class="open-sans-light fc--mg">Vayyar Smart Home sensors create a 3D image of everything happening in your home in real-time.</h3>
+    <div class="columns text-left medium-text-center small-12 large-9">
+      <h3 class="open-sans-light">Vayyar Smart Home sensors preserve privacy while monitoring what is happening in and around your home in real-time</h3>
     </div>
   </div>
 
-  <div class="row push--60 align-middle">
+  <div class="row push--30 push--medium-60 align-middle">
     <div class="columns large-5">
-      <h3 class="open-sans-light">Monitor things as subtle as a baby’s breathing to seeing through walls to ensure your home is safe.</h3>
-      <h3 class="open-sans-light push--20">No cameras, <br />no wearables.</h3>
+      <h4 class="open-sans-light">Detect and track presence, location, movement, posture and vital signs without the use of Cameras or Wearables. <br /><br />Monitor movement as subtle as a the breathing of a baby or identify the presence of an intruder.</h4>
     </div>
-    <div class="columns">
+    <div class="columns small-12 push--30 medium-expand">
       <div class="responsive-embed widescreen">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WUgvvPRH7Oc" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VB2fLHVEhjs" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
 
-  <div class="row push--100">
+  <div class="row push--60 push--medium-100">
     <div class="columns text-center">
-      <h2 class="open-sans-light">Embeddable capabilities</h2>
+      <h2 class="open-sans-light">Applications</h2>
     </div>
   </div>
 
-  <div class="row push--40">
-    <div class="columns">
-      <h3 class="open-sans-bold fc--aqua">01. Home Automation</h3>
-      <h3 class="open-sans-bold fc--aqua push--40">02. Elderly Care</h3>
+  <div class="row push--medium-40">
+    <div class="columns small-12 medium-expand text-center">
+      <h3 class="open-sans-bold push--20 fc--aqua"><a href="#home-automation" class="js-jumplink">1. Home Automation</a></h3>
+      <h3 class="open-sans-bold push--20 fc--aqua push--medium-40"><a href="#elderly-care" class="js-jumplink">2. Elderly Care</a></h3>
     </div>
-    <div class="columns">
-      <h3 class="open-sans-bold fc--aqua">03. Security &amp; Fire</h3>
-      <h3 class="open-sans-bold fc--aqua push--40">04. Maintenance</h3>
+    <div class="columns small-12 medium-expand text-center">
+      <h3 class="open-sans-bold push--20 fc--aqua"><a href="#security-fire" class="js-jumplink">3. Security &amp; Fire</a></h3>
+      <h3 class="open-sans-bold push--20 fc--aqua push--medium-40"><a href="#maint-reno" class="js-jumplink">4. Maintenance & Renovation</a></h3>
     </div>
   </div>
 
-  <div class="row push--200 align-middle align-justify">
-    <div class="columns large-6">
-      <img src="http://placehold.it/600x400" />
-      <img class="push--10" src="http://placehold.it/600x400" />
+  <div class="row push--60 push--medium-200 align-middle align-justify" id="home-automation">
+    <div class="columns small-12 large-5">
+      <img src="/assets/images/smart-home-automation.jpg" />
+      <img class="push--20 push--medium-10" src="/assets/images/smart-home-automation2.jpg" />
     </div>
-    <div class="columns large-6">
+    <div class="columns push--30 small-12 large-6">
       <h1 class="xl open-sans-bold fc--lg">01</h1>
       <h2 class="open-sans-light">Home Automation</h2>
-      <ul class="feature-list push--30">
-        <li>Track people's location, body position, adult or child, condition sleep or awake.</li>
+      <p class="lead open-sans-light">
+        Monitor your home to detect people’s locations, movements, posture and vital signs for real-time, activity based automation.
+      </p>
+      <ul class="feature-list push--medium-30">
         <li>
-          Useful for saving energy for:
-          <div class="row push--20">
-            <div class="columns text-center">
+          Optimize energy consumption for:
+          <div class="row push--medium-20">
+            <div class="columns small-12 medium-expand text-center">
               <span class="i-xl"><i class="fa fa-lightbulb-o" aria-hidden="true"></i></span><br />
-              Control Lighting
+              Lighting
             </div>
-            <div class="columns text-center">
+            <div class="columns small-12 medium-expand text-center">
               <span class="i-xl"><i class="fa fa-snowflake-o" aria-hidden="true"></i></span><br />
               Air Conditioning
             </div>
-            <div class="columns text-center">
+            <div class="columns small-12 medium-expand text-center">
               <span class="i-xl"><i class="fa fa-television" aria-hidden="true"></i></span><br />
               Home Appliances
             </div>
           </div>
         </li>
-        <li>Get direct WiFi (beam-forming) signal towards location of people for better signal. </li>
-        <li>Analyze people watching TV to determine bandwidth streaming </li>
+        <li>Sound optimization and echo cancellation</li>
+        <li>Enable a wider range of abilities for smart home appliances including the proactive ability to anticipate needs of people in the home</li>
       </ul>
     </div>
   </div>
 
-  <div class="section section--gray push--200">
+  <div class="section section--gray push--60 push--medium-200" id="elderly-care">
     <div class="row align-middle align-justify">
-    <div class="columns large-5">
+    <div class="columns small-12 large-6">
       <h1 class="xl open-sans-bold fc--lg">02</h1>
       <h2 class="open-sans-light">Elderly Care</h2>
-      <ul class="feature-list push--30">
-        <li>Monitor the elderly or regular households without wearables or privacy violating cameras:</li>
-        <li>
-          Identify falling in:
-          <div class="row push--20">
-            <div class="columns text-center">
-              <span class="i-xl"><i class="fa fa-shower" aria-hidden="true"></i></span><br />
-              Shower
-            </div>
-            <div class="columns text-center">
-              <span class="i-xl"><i class="fa fa-bed" aria-hidden="true"></i></span><br />
-              Bedroom
-            </div>
-            <div class="columns text-center">
-              <span class="i-xl"><i class="fa fa-home" aria-hidden="true"></i></span><br />
-              Around House
-            </div>
-          </div>
-        </li>
-        <li>
-          Monitor daily activity patterns:
-          <div class="row push--20">
-            <div class="columns text-center">
-              <span class="i-xl"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></span><br />
-              Distance Walked
-            </div>
-            <div class="columns text-center">
-              <span class="i-xl"><i class="fa fa-clock-o" aria-hidden="true"></i></span><br />
-              Average Time in a Room
-            </div>
-            <div class="columns text-center">
-              <span class="i-xl"><i class="fa fa-exclamation-circle" aria-hidden="true"></i></span><br />
-              Send Alerts
-            </div>
-          </div>
-        </li>
-        <li>Send alerts for unusual breathing heart rate issues during sleep or rest</li>
+      <ul class="feature-list push--30 push--medium-30">
+        <li>Detect a fall in the shower, bedroom or around the house, with no cameras or wearables</li>
+        <li>Monitor daily activity patterns to identify deviations or deteriorations - distance walked, average time in a room, and more</li>
+        <li>Monitor vital signs during sleep for one or multiple people at the same time</li>
       </ul>
     </div>
-    <div class="columns large-6">
-      <img src="http://placehold.it/600x400" />
-      <img class="push--10" src="http://placehold.it/600x400" />
+    <div class="columns push--30 small-12 large-5">
+      <img src="/assets/images/smart-home-elderly.jpg" />
+      <img class="push--20 push--medium-10" src="/assets/images/smart-home-elderly2.jpg" />
     </div>
   </div>
   </div>
 
-  <div class="row push--200">
-    <div class="columns">
-      <img src="http://placehold.it/600x400" />
+  <div class="row push--60 push--medium-200 align-middle align-justify" id="security-fire">
+    <div class="columns small-12 large-5">
+      <img src="/assets/images/smart-home-security-fire.jpg" />
     </div>
-    <div class="columns">
+    <div class="columns push--30 small-12 large-6">
       <h1 class="xl open-sans-bold fc--lg">03</h1>
       <h2 class="open-sans-light">Security & Fire</h2>
-      <ul class="feature-list push--30">
-        <li>Monitor your entire home or apartment, both inside and out </li>
-        <li>Perimeter detection</li>
-        <li>Track if irregular amount of people are in your house</li>
-        <li>Identify where people are and health condition in the case of fire or disaster</li>
-        <li>Sees through smoke, in complete darkness</li>
+      <ul class="feature-list push--30 push--medium-30">
+        <li>Monitor your entire home, interior and exterior for Intruder detection and perimeter protection</li>
+        <li>Identify irregular activities in your home</li>
+        <li>Detect the location of occupants and their condition in the case of a fire or disaster</li>
       </ul>
     </div>
   </div>
 
-  <div class="section section--gray push--200">
+  <div class="section section--gray push--60 push--medium-200" id="maint-reno">
     <div class="row align-middle align-justify">
-      <div class="columns large-5">
+      <div class="columns small-12 large-6">
         <h1 class="xl open-sans-bold fc--lg">04</h1>
-        <h2 class="open-sans-light">Maintenance</h2>
-        <ul class="feature-list push--30">
-          <li>Monitor infrastructure inside the wall. </li>
-          <li>Identify leaks in the walls or floor in the basement with a table-top device and see erosion/burning of wires/materials inside the walls</li>
+        <h2 class="open-sans-light">Maintenance and Renovation</h2>
+        <ul class="feature-list push--30 push--medium-30">
+          <li>Detect the location and depth of wires and pipes inside you walls</li>
+          <li>Discover moving pests inside you walls</li>
+          <li>Pre-emptively identify leaks inside your walls</li>
         </ul>
       </div>
-      <div class="columns large-6">
-        <img src="http://placehold.it/600x400" />
+      <div class="columns push--30 small-12 large-5">
+        <img src="/assets/images/smart-home-maint.jpg" />
       </div>
     </div>
   </div>
 
-  <div class="row push--200">
+  <div class="row push--40 push--medium-200">
     <div class="columns text-center">
       <h2 class="open-sans-light">Works in all conditions</h2>
-      <h4 class="open-sans-light fc--mg">Vayyar sensors use RF technology enabling them to work in:</h4>
+      <h4 class="open-sans-light fc--mg">Vayyar sensors use 3D imaging technology which works in all lighting and weather conditions</h4>
     </div>
   </div>
-  <div class="row push--60 align-center">
-    <div class="columns large-2 text-center">
+  <div class="row push--30 push--medium-60 align-center">
+    <div class="columns small-6 large-2 text-center">
       <span class="i-xl"><i class="fa fa-fire" aria-hidden="true"></i></span><br />
-      <h4 class="open-sans-light push--20">Smoke</h4>
+      <h4 class="open-sans-light push--medium-20">Smoke</h4>
     </div>
-    <div class="columns large-2 text-center">
+    <div class="columns small-6 large-2 text-center">
       <span class="i-xl"><i class="fa fa-cloud" aria-hidden="true"></i></span><br />
-      <h4 class="open-sans-light push--20">Fog</h4>
+      <h4 class="open-sans-light push--medium-20">Fog</h4>
     </div>
-    <div class="columns large-2 text-center">
+    <div class="columns small-6 push--20 large-2 text-center">
       <span class="i-xl"><i class="fa fa-moon-o" aria-hidden="true"></i></span><br />
-      <h4 class="open-sans-light push--20">Complete Darkness</h4>
+      <h4 class="open-sans-light push--medium-20">Complete Darkness</h4>
     </div>
-    <div class="columns large-2 text-center">
+    <div class="columns small-6 push--20 large-2 text-center">
       <span class="i-xl"><i class="fa fa-sun-o" aria-hidden="true"></i></span><br />
-      <h4 class="open-sans-light push--20">Bright Sunlight</h4>
+      <h4 class="open-sans-light push--medium-20">Bright Sunlight</h4>
     </div>
   </div>
-  <div class="row push--60">
+  <div class="row push--30 push--medium-60">
     <div class="columns text-center">
       <p class="lead open-sans-light">
-        They protect privacy and do not use cameras, and don’t require wearables.
+        They respect privacy and don’t require a camera or wearable
       </p>
     </div>
   </div>
