--- a/source/views/pages/technology/index.hbs
+++ b/source/views/pages/technology/index.hbs
@@ -10,7 +10,7 @@ canon: '/technology/'
 
 <div class="page-hero page-hero--tech row expanded align-middle text-center">
   <div class="columns">
-    <h1 class="open-sans-light">One sensor to rule them all</h1>
+    <h1 class="open-sans-light">One Sensor to Rule Them All</h1>
   </div>
 </div>
 
@@ -18,71 +18,75 @@ canon: '/technology/'
 
   <div class="row">
     <div class="columns text-center">
-      <h2 class="open-sans-light">Core Talents </h2>
+      <h2 class="open-sans-light">Sensor Capabilities</h2>
     </div>
   </div>
 
-  <div class="row push--60">
-    <div class="columns square">
+  <div class="row push--30 push--medium-60">
+    <div class="columns show-for-large square" style="background-image: url(/assets/images/tech-imaging.jpg);">
       <div class="square__inner">
       </div>
     </div>
-    <div class="columns square">
+    <div class="columns show-for-large square" style="background-image: url(/assets/images/tech-monitoring.jpg);">
       <div class="square__inner">
       </div>
     </div>
-    <div class="columns square">
+    <div class="columns show-for-large square" style="background-image: url(/assets/images/tech-sensing.jpg);">
       <div class="square__inner">
       </div>
     </div>
-    <div class="columns square">
+    <div class="columns show-for-large square" style="background-image: url(/assets/images/tech-testing.jpg);">
       <div class="square__inner">
       </div>
     </div>
   </div>
 
-  <div class="row push--60">
-    <div class="columns text-center">
-      <h3 class="open-sans-bold">Imaging</h3>
+  <div class="row push--medium-60">
+    <div class="columns small-12 medium-expand text-center">
+      <img src="/assets/images/tech-imaging.jpg" class="hide-for-large" />
+      <h3 class="open-sans-bold push--20">Imaging</h3>
       <p class="lead open-sans-light">
-        See inside and through walls & objects to create a 3D image of what’s inside
+        See through walls & objects and creates a 3D image of what’s inside
       </p>
     </div>
-    <div class="columns text-center">
-      <h3 class="open-sans-bold">3D Monitoring</h3>
+    <div class="columns small-12 medium-expand push--20 text-center">
+      <img src="/assets/images/tech-monitoring.jpg" class="hide-for-large" />
+      <h3 class="open-sans-bold push--20">Monitoring</h3>
       <p class="lead open-sans-light">
-        Monitor People and object’s location, movements and vital signs with no wearables or camera.
+         Identify objects and monitor people’s location, movement, height, posture and vital signs, with no wearables and without a camera
       </p>
     </div>
-    <div class="columns text-center">
-      <h3 class="open-sans-bold">Sensing</h3>
+    <div class="columns small-12 medium-expand push--20 text-center">
+      <img src="/assets/images/tech-sensing.jpg" class="hide-for-large" />
+      <h3 class="open-sans-bold push--20">Sensing</h3>
       <p class="lead open-sans-light">
-        Sense the makeup of materials such as protein percentage in milk, or moisture levels in soil.
+        Sense the makeup of materials such as fat percentage in milk, or moisture levels in soil
       </p>
     </div>
-    <div class="columns text-center">
-      <h3 class="open-sans-bold">Sensing</h3>
+    <div class="columns small-12 medium-expand push--20 text-center">
+      <img src="/assets/images/tech-testing.jpg" class="hide-for-large" />
+      <h3 class="open-sans-bold push--20">Testing</h3>
       <p class="lead open-sans-light">
-        See inside and through walls & objects to create a 3D image of what’s inside
+        Testing and measurement of communication devices, for labs and manufacturing lines
       </p>
     </div>
   </div>
 
-  <div class="row push--60 align-middle align-justify">
-    <div class="columns">
+  <div class="row push--60 push--medium-60 align-middle align-justify">
+    <div class="columns small-12 large-expand text-center medium-text-left">
       <h2 class="open-sans-light">How It Works</h2>
-      <p class="open-sans-light lead push--20 fc--mg">
-        Vayyar’s sensor is comprised of a unique RF chip, supporting dozens of transceivers which transmit on wide and flexible frequency bands. These characteristics enable, upon signals receive and analysis, the creation of high-resolution, 3D images.
+      <p class="open-sans-light lead push--medium-20 fc--mg">
+        Vayyar’s sensor is comprised of a unique chip which supports dozens of transceivers that transmit on wide and flexible frequency bands. These characteristics enable it to receive, analyze, and create high-resolution 3D images.
       </p>
     </div>
     <div class="columns large-5 text-right">
-      <img src="/assets/images/chip-how.png" width="100%" height="auto" />
+      <img src="/assets/images/chip-how.jpg" width="100%" height="auto" />
     </div>
   </div>
 
-  <div class="row push--40">
-    <div class="columns section section--gray text-center section--padded-med">
-      <h3 class="open-sans-semi-bold">Essentially, an entire MIMO Radar System on a Chip</h3>
+  <div class="row push--30 push--medium-60 align-center">
+    <div class="columns small-10 large-10 section section--gray text-center section--padded-med">
+      <h3 class="open-sans-semi-bold">An entire Imaging System on a Chip</h3>
     </div>
   </div>
 
